<resources>
    <string name="app_name">HotWallet</string>
    <string name="type">连接中...</string>
    <string name="type1">取消配对：</string>
    <string name="type2">正在配对：</string>
    <string name="type3">完成配对：</string>
    <string name="type4">加载中...</string>
    <string name="type5">刷新中...</string>
    <string name="main1">蓝牙连接</string>
    <string name="main2">重新扫描</string>
    <string name="main3">正在搜索附近的设备···</string>
    <string name="main4">再按一次退出程序</string>
    <string name="main5">未找到相关设备，请检查设备是否开启</string>
    <string name="selete1">创建钱包</string>
    <string name="selete2">导入钱包</string>
    <string name="selete3">导入助记词</string>
    <string name="selete4">通过助记词导入钱包</string>
    <string name="selete5">创建新钱包</string>
    <string name="selete6">创建新的资产钱包</string>
    <string name="selete7">pin码输入长度错误</string>
    <string name="selete8">两次输入的pin码不一致</string>
    <string name="selete9">助记词生成中...</string>
    <string name="recover1">导入助记词</string>
    <string name="recover2">助记词</string>
    <string name="recover3">请输入您的钱包助记词，按空格做分隔</string>
    <string name="recover4">设置PIN:</string>
    <string name="recover5">请输入PIN码</string>
    <string name="recover6">确认PIN:</string>
    <string name="recover7">请再次输入PIN码</string>
    <string name="recover8">导入钱包</string>
    <string name="recover9">助记词不能为空</string>
    <string name="recover10">恢复中...</string>
    <string name="create1">请选择助记词长度</string>
    <string name="create2">您选择的数据将是您钱包助记词的数量。助记词越长，您的钱包就越安全。</string>
    <string name="create5">12</string>
    <string name="create8">15</string>
    <string name="create6">18</string>
    <string name="create9">21</string>
    <string name="create7">24</string>
    <string name="num1">备份助记词</string>
    <string name="num2">助记词用于恢复钱包或重置钱包密码，将他准确的抄写在纸上，并存放在只有您知道的地方。</string>
    <string name="num3">请抄下您卡上的钱包助记词</string>
    <string name="num4">注:“按键1”为翻页功能，请确保您记录下全部的助记词，然后在按下“按键2”。当确认无误后app会跳转到首页面</string>
    <string name="num5">请记下卡片上的助记词</string>
    <string name="f1">总资产（￥）</string>
    <string name="f2">转账</string>
    <string name="f3">收款</string>
    <string name="f4">网络加载中...</string>
    <string name="f5">交易记录</string>
    <string name="f6">暂无记录</string>
    <string name="ff1">选择收款币种</string>
    <string name="ff2">设置收款金额</string>
    <string name="ff3">请输入收款金额（选填）</string>
    <string name="ff6">复制收款地址</string>
    <string name="ff7">复制失败：地址不能为空</string>
    <string name="ff8">复制地址成功</string>
    <string name="ff9">地址切换中...</string>
    <string name="ff10">打开ComboWallet扫一扫</string>
    <string name="ff11">微信好友</string>
    <string name="ff12">朋友圈</string>
    <string name="ff13">QQ</string>
    <string name="ff14">您还没有安装微信</string>
    <string name="ff15">分享失败</string>
    <string name="fff1">收款账号</string>
    <string name="fff2">请输入或粘贴钱包地址</string>
    <string name="fff3">转账币种</string>
    <string name="fff4">当前余额</string>
    <string name="fff5">转出金额</string>
    <string name="fff6">请输入转出金额</string>
    <string name="fff7">手续费</string>
    <string name="fff8">请输入手续费</string>
    <string name="fff9">PIN码</string>
    <string name="fff10">请输入PIN码</string>
    <string name="fff11">转出</string>
    <string name="fff13">请输入4位数字PIN码</string>
    <string name="fff14">转账地址不能为空</string>
    <string name="fff15">金额不能为空</string>
    <string name="fff16">手续费不能小于0.0001</string>
    <string name="fff17">转出地址不能是本卡地址</string>
    <string name="fff18">余额不足</string>
    <string name="fff19">服务费小数位数不能超过八位</string>
    <string name="fff20">转账金额小数位数不能超过八位</string>
    <string name="fff21">金额不能为零</string>
    <string name="fff22">请输入正确的BTC转账地址</string>
    <string name="fff23">请在载体上确认信息</string>
    <string name="fff231">转账中...</string>
    <string name="fff24">转账地址格式不带有0x</string>
    <string name="fff25">请输入正确的转账地址</string>
    <string name="fff26">服务费不能为空</string>
    <string name="fff27">最大服务费不能为空</string>
    <string name="fff28">服务费不能超过9000位</string>
    <string name="fff29">构造BTC交易失败</string>
    <string name="fff30">交易失败</string>
    <string name="fff32">交易成功</string>
    <string name="fff33">BTC交易成功，查询余额失败：</string>
    <string name="fff34">查询ETH交易数失败</string>
    <string name="fff36">ETH交易成功，查询余额失败</string>
    <string name="fff38">注册成功</string>
    <string name="fff39">注册失败</string>
    <string name="fff40">登录成功</string>
    <string name="fff41">登录失败</string>
    <string name="fff42">trustset成功</string>
    <string name="fff43">trustset失败</string>
    <string name="fff44">钱包密码</string>
    <string name="fff45">请输入8位数以上的钱包密码</string>
    <string name="add1">请输入Token或合约地址</string>
    <string name="add3">添加币种</string>
    <string name="add4">未查到相关信息</string>
    <string name="add5">币种已添加</string>
    <string name="add6">添加成功</string>
    <string name="f51">设置</string>
    <string name="f52">重置PIN码</string>
    <string name="f53">版本更新</string>
    <string name="f54">删除账户</string>
    <string name="f55">检查APP新版本</string>
    <string name="f56">检查固件更新</string>
    <string name="f57">检查DFU更新</string>
    <string name="f58">请输入新PIN码</string>
    <string name="f59">新的PIN码:</string>
    <string name="f60">请输入新的PIN码</string>
    <string name="f61">确认PIN码:</string>
    <string name="f62">请再次输入新的PIN码</string>
    <string name="f63">助记词:</string>
    <string name="f64">请输入助记词前四个单词，空格分隔</string>
    <string name="f511">币种不存在</string>
    <string name="f513">取消</string>
    <string name="f514">确定</string>
    <string name="f515">初始化中...</string>
    <string name="f516">输入内容不能为空！</string>
    <string name="f517">请输入前四位助记词</string>
    <string name="f518">重置中...</string>
    <string name="f519">两次输入的pin码不一致</string>
    <string name="f520">指纹管理</string>
    <string name="f521">退出</string>
    <string name="gx1">当前为最新版本，无需更新</string>
    <string name="gx2">暂不支持此功能</string>
    <string name="gx3">DFU升级中...</string>
    <string name="gx4">检测版本号...</string>
    <string name="pp1">添加币种</string>
    <string name="pp2">扫一扫</string>
    <string name="head1">下拉刷新</string>
    <string name="head2">上次更新</string>
    <string name="head3">松开刷新</string>
    <string name="head4">正在刷新...</string>
    <string name="head5">最近更新:</string>
    <string name="ff4">BTC</string>
    <string name="ff5">ETH</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="scan_tips1">开灯</string>
    <string name="scan_tips2">关灯</string>
    <string name="scan_tips3">相册</string>
    <string name="u1">网络请求失败，请检查您的网络</string>
    <string name="u2">助记词数量与卡内不符</string>
    <string name="u3">未初始化或功能不支持</string>
    <string name="u4">生成私钥错误</string>
    <string name="u5">公钥计算错误</string>
    <string name="u6">内存申请错误</string>
    <string name="u7">写FLASH失败</string>
    <string name="u8">数字签名错误</string>
    <string name="u9">PIN码错误</string>
    <string name="u10">引用数据无效</string>
    <string name="u11">数据域参数错误</string>
    <string name="u12">命令参数错误</string>
    <string name="u13">命令不支持</string>
    <string name="u14">通信错误</string>
    <string name="u15">使用条件不满足</string>
    <string name="u16">待签名的输出与上一次不符</string>
    <string name="u17">固件不完整</string>
    <string name="u18">无固件</string>
    <string name="u19">无效数据</string>
    <string name="u20">数据错误</string>
    <string name="u21">蓝牙连接超时,请重新发起交易</string>
    <string name="u22">固件升级成功，请重新连接</string>
    <string name="u23">蓝牙断开连接，请重新连接</string>
    <string name="u24">否</string>
    <string name="u25">是</string>
    <string name="u26">连接成功</string>
    <string name="u27">连接断开</string>
    <string name="u28">初始化成功</string>
    <string name="u29">重置成功</string>
    <string name="u30">交易取消</string>
    <string name="u31">固件升级成功</string>
    <string name="u32">查询BTC余额网络请求失败</string>
    <string name="u33">查询ETH余额网络请求失败</string>
    <string name="u34">注册BTC地址网络请求失败</string>
    <string name="u36">录入指纹成功</string>
    <string name="u37">删除指纹成功</string>
    <string name="u38">录入指纹失败，请重新录入</string>
    <string name="c1">解析成功，结果为：</string>
    <string name="c2">解析图片失败</string>
    <string name="c3">请打开相机权限</string>
    <string name="c4">正在扫描...</string>
    <string name="c5">未发现可识别信息</string>
    <string name="l1">语言</string>
    <string name="l2">中文</string>
    <string name="l3">英文</string>
    <string name="l4">日文</string>
    <string name="index1">钱包</string>
    <string name="index2">行情</string>
    <string name="index3">资讯</string>
    <string name="index4">典当</string>
    <string name="hq1">资产</string>
    <string name="hq2">最新价</string>
    <string name="hq3">涨跌幅</string>
    <string name="dfu">DFU升级</string>
    <string name="dfu1">确定要升级DFU吗？</string>
    <string name="dfu2">升级进度：</string>
    <string name="dfu3">升级完成</string>
    <string name="h1">相机</string>
    <string name="h2">本地图片</string>
    <string name="kongge">&#160;&#160;&#160;</string>
    <string name="m1">注册中...</string>
    <string name="m11">登录中...</string>
    <string name="m2">PIN码不能为空或长度不对</string>
    <string name="m3">用户名不能为空</string>
    <string name="m4">密码不能为空</string>
    <string name="m5">我的</string>
    <string name="m6">注册</string>
    <string name="m61">登录</string>
    <string name="m7">auth0安全登录</string>
    <string name="m8">请输入用户名</string>
    <string name="m9">请输入用户密码</string>
    <string name="m10">确认登录</string>
    <string name="m12">检查更新</string>
    <string name="m13">关于我们</string>
    <string name="m14">未登录</string>
    <string name="m15">请登录后在进行操作</string>
    <string name="m16">充值</string>
    <string name="m17">提现</string>
    <string name="m18">卡内钱包</string>
    <string name="utils1">获取卡内币种信息...</string>
    <string name="utils2">充值中...</string>
    <string name="utils3">提现中...</string>
    <string name="utils4">购买中...</string>
    <string name="utils5">请在卡上确认信息</string>
    <string name="card">当前平台余额:</string>
    <string name="card2">当前卡内余额:</string>
    <string name="card3">请输入金额</string>
    <string name="card4">圈存</string>
    <string name="card5">转回平台</string>
    <string name="card6">可圈存金额为零</string>
    <string name="card7">可转出金额为零</string>
    <string name="card8">转出中...</string>
    <string name="card9">圈存中...</string>
    <string name="cz1">充值</string>
    <string name="cz2">平台余额:</string>
    <string name="cz3">海博币余额:</string>
    <string name="cz4">确认</string>
    <string name="zw1">指纹1</string>
    <string name="zw2">指纹2</string>
    <string name="zw3">指纹3</string>
    <string name="zw4">录入指纹</string>
    <string name="zw5">当前指纹不存在，是否录入？</string>
    <string name="zw6">请在设备上录入您的指纹信息</string>
    <string name="zw7">指纹详情</string>
    <string name="zw8">删除</string>
    <string name="uhttp1">获取挑战符失败</string>
    <string name="uhttp2">即将登录海博智能，请确认是本人操作</string>
    <string name="uhttp3">获取auth0用户失败</string>
    <string name="uhttp4">查询海博币余额失败</string>
    <string name="uhttp6">查询平台余额失败</string>
    <string name="uhttp7">充值成功</string>
    <string name="uhttp8">充值失败</string>
    <string name="uhttp9">提现成功</string>
    <string name="uhttp10">提现失败</string>
    <string name="uhttp11">购买成功</string>
    <string name="uhttp12">购买失败</string>
    <string name="uhttp13">投资成功</string>
    <string name="uhttp14">投资失败</string>
    <string name="uhttp15">赎回成功</string>
    <string name="uhttp16">赎回失败</string>
    <string name="uhttp17">分红成功</string>
    <string name="uhttp18">分红失败</string>
    <string name="uhttp19">圈存成功</string>
    <string name="uhttp20">圈存失败</string>
    <string name="uhttp21">转出成功</string>
    <string name="uhttp22">转出失败</string>
    <string name="uhttp23">扣款成功，购买失败</string>
    <string name="uhttp24">获取XRP余额/交易序号失败</string>
    <string name="uhttp25">获取aed余额失败</string>
    <string name="p1">出当</string>
    <string name="p2">投资</string>
    <string name="p22">投资列表</string>
    <string name="p3">风险报告</string>
    <string name="p4">商城</string>
    <string name="cd1">我的典当物</string>
    <string name="cd2">当前无网络连接</string>
    <string name="tz1">发行总Token:</string>
    <string name="tz2">可投资Token:</string>
    <string name="tz3">承当者:</string>
    <string name="tz4">不能分红</string>
    <string name="tz5">赎回</string>
    <string name="tz6">已赎回</string>
</resources>