<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2633">
    <TextView
        android:id="@+id/fhcreate"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:id="@+id/fanhuiadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/name"
        android:layout_marginStart="20dp"
        android:src="@drawable/fanhui" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/selete5"
        android:textColor="#fff"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:background="#ff222a38"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/create1"
        android:textColor="#fff"
        android:textSize="16sp" />

    <!--<Button-->
        <!--android:id="@+id/button12"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginStart="40dp"-->
        <!--android:layout_marginTop="151dp"-->
        <!--android:background="@drawable/selector_button"-->
        <!--android:text="@string/create5"-->
        <!--android:textColor="#fff" />-->

    <Button
        android:id="@+id/button15"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="115dp"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/create8"
        android:textColor="#ff333333" />

    <Button
        android:id="@+id/button21"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginLeft="187dp"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:background="@drawable/selector_button"
        android:text="@string/create9"
        android:textColor="#ff333333" />

    <Button
        android:id="@+id/button18"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:background="@drawable/selector_button"
        android:text="@string/create6"
        android:textColor="#ff333333" />

    <Button
        android:id="@+id/button24"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="115dp"
        android:background="@drawable/selector_button"
        android:text="@string/create7"
        android:textColor="#ff333333" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="342dp"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="165dp"
        android:layout_marginRight="20dp"
        android:text="@string/create2"
        android:textColor="#66ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="241dp"
        android:background="#ff222a38" />

    <TextView
        android:id="@+id/shezhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="20dp"
        android:text="@string/recover4"
        android:textColor="#ffffffff"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="274dp"
        android:layout_height="25dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="260dp"
        android:background="#ff222a38"
        android:hint="@string/recover5"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="#fff"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/xian"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="294dp"
        android:background="#364359" />

    <TextView
        android:id="@+id/queren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="306dp"
        android:text="@string/recover6"
        android:textColor="#fff"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/pin1"
        android:layout_width="275dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@id/queren"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="305dp"
        android:background="#ff222a38"
        android:hint="@string/recover7"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="#fff"
        android:textSize="14dp" />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/lanyabg"
        android:textColor="#fff"
        android:text="@string/selete1"
        android:textAllCaps="false" />


</RelativeLayout>