<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2633">
    <TextView
        android:id="@+id/fhrecover"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:id="@+id/fanhuiadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/name"
        android:layout_marginStart="20dp"
        android:src="@drawable/fanhui" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/recover1"
        android:textColor="#fff"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:background="#ff222a38" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/fanhuiadd"
        android:layout_marginTop="75dp"
        android:text="@string/recover2"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/zhujici1"
        android:layout_width="wrap_content"
        android:layout_height="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/fanhuiadd"
        android:layout_marginTop="104dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="#ff222a38"
        android:hint="@string/recover3"
        android:gravity="top|left"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="241dp"
        android:background="#ff222a38" />

    <TextView
        android:id="@+id/shezhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="20dp"
        android:text="@string/recover4"
        android:textColor="#ffffffff"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="284dp"
        android:layout_height="25dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="260dp"
        android:background="#ff222a38"
        android:hint="@string/recover5"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="#fff"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/xian"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="294dp"
        android:background="#364359" />

    <TextView
        android:id="@+id/queren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="306dp"
        android:text="@string/recover6"
        android:textColor="#fff"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/pin1"
        android:layout_width="283dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@id/queren"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="305dp"
        android:background="#ff222a38"
        android:hint="@string/recover7"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="#fff"
        android:textSize="14dp" />

    <Button
        android:id="@+id/verify1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/lanyabg"
        android:textColor="#fff"
        android:text="@string/recover8"
        android:textAllCaps="false" />

</RelativeLayout>
