<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chongzhi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2633"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/card"
            android:textSize="17dp"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/ptmoney"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_toEndOf="@+id/textView7"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="#fff"
            android:gravity="left"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/card2"
            android:textColor="#fff"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/money"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ptmoney"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_toEndOf="@+id/textView9"
            android:text="0"
            android:gravity="left"
            android:textColor="#fff"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/cj"
            android:inputType="number"
            android:hint="@string/card3"
            android:textColorHint="#808080"
            android:textColor="#808080" />

        <Button
            android:id="@+id/qc"
            android:layout_width="301dp"
            android:layout_height="40dp"
            android:layout_below="@+id/input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/lanyabg"
            android:text="@string/card4"
            android:textColor="#fff"
            android:textSize="16dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="301dp"
            android:layout_height="40dp"
            android:layout_below="@+id/qc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/lanyabg"
            android:text="@string/card5"
            android:textColor="#fff"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>